# 2024-12-01-parallel-labs

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  make.bat  make.sh
assets/: findmax.txt  sortme.txt  sortme.txt.sorted  tree.json
assets/wc/: 1.txt  2.txt  3.txt
include/: cannon.hpp  monte_carlo.hpp
src/: bfs.cpp  cannon.cpp  fib.cpp  main.cpp  max.cpp  merge.cpp  monte_carlo.cpp  wc.cpp
